--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,7 +8,7 @@
 @import "components/section-title-icon";
 @import "components/section-title-txt";
 @import "components/form";
-@import "components/img-3-col";
+@import "components/gallery-grid";
 @import "components/default-list";
 @import "layout/header";
 @import "layout/complete-projects";
@@ -17,3 +17,5 @@
 @import "layout/fantasy";
 @import "layout/design-project";
 @import "layout/steps-to-goal";
+@import "layout/team";
+@import "layout/clients";
