--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -44,7 +44,7 @@
 
   .header__content {
     position: relative;
-    padding: 12% 0 13% 5%;
+    padding: 15% 0 15% 5%;
     background: url("../assets/img/header-layer.png") no-repeat;
   }
 
@@ -57,7 +57,8 @@
       }
     }
 
-    p {
+    .header__sub-title {
+      width: 35%;
       margin: 25px 0 45px;
       @include futura-font(1.37rem, $white_color, none);
       line-height: 1.9rem;
