--- a/scss/layout/_types-repair.scss
+++ b/scss/layout/_types-repair.scss
@@ -109,7 +109,7 @@
 }
 
 .form {
-  @include form(block, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.15), 100%);
+  @include form(block, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.15));
 }
 
 .form.form_repair {
