--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -2,21 +2,27 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
 
-.menu-wrap {
-  width: 40%;
-}
-
-.menu-item {
-  display: flex;
-  justify-content: space-between;
-  a {
-    @include futura-font(14px, $white_color, uppercase);
-    text-decoration: none;
+  .logo-txt {
+    @include futura-font(14px, $gold_color, uppercase);
+    cursor: pointer;
   }
-}
 
-.contact-phone {
-  @include futura-font(14px, $gold_color, none);
+  .menu-wrap {
+    width: 40%;
+  }
+
+  .menu-item {
+    display: flex;
+    justify-content: space-between;
+
+    a {
+      @include futura-font(14px, $white_color, uppercase);
+      text-decoration: none;
+    }
+  }
+
+  .contact-phone {
+    @include futura-font(14px, $gold_color, none);
+  }
 }
