--- a/scss/main.css
+++ b/scss/main.css
@@ -70,7 +70,8 @@ a {
   text-decoration: none;
 }
 
-main {
+main,
+footer {
   width: 100%;
 }
 
@@ -101,11 +102,19 @@ main {
           align-items: center;
 }
 
-.menu-wrap {
+.menu .logo-txt {
+  font-family: "Futura", sans-serif;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #e3b873;
+  cursor: pointer;
+}
+
+.menu .menu-wrap {
   width: 40%;
 }
 
-.menu-item {
+.menu .menu-item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -114,7 +123,7 @@ main {
           justify-content: space-between;
 }
 
-.menu-item a {
+.menu .menu-item a {
   font-family: "Futura", sans-serif;
   text-transform: uppercase;
   font-size: 14px;
@@ -122,7 +131,7 @@ main {
   text-decoration: none;
 }
 
-.contact-phone {
+.menu .contact-phone {
   font-family: "Futura", sans-serif;
   text-transform: none;
   font-size: 14px;
@@ -328,14 +337,6 @@ main {
   display: flex;
   width: 100%;
   background-color: #131313;
-}
-
-.logo-txt {
-  font-family: "Futura", sans-serif;
-  text-transform: uppercase;
-  font-size: 14px;
-  color: #e3b873;
-  cursor: pointer;
 }
 
 .header__wrap {
@@ -1983,7 +1984,7 @@ main {
 }
 
 .clients {
-  padding: 41% 0 30%;
+  padding: 41% 0 26%;
   background-image: url("../assets/img/clients-section-frame.png");
   background-position: bottom;
   background-repeat: repeat-x;
@@ -2135,5 +2136,304 @@ main {
 .clients__gallery .card-endnote p.card-endnote__right {
   width: 50%;
   background-image: url("../assets/img/endnote-icon-right.png");
+}
+
+.footer {
+  position: relative;
+  padding-top: 19%;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(3.47%, rgba(24, 24, 24, 0.9)), to(rgba(24, 24, 24, 0.72))), url("../assets/img/footer-bckg.png"), #181818;
+  background: linear-gradient(180deg, rgba(24, 24, 24, 0.9) 3.47%, rgba(24, 24, 24, 0.72) 100%), url("../assets/img/footer-bckg.png"), #181818;
+  background-size: cover;
+}
+
+.form_footer {
+  position: absolute;
+  top: -21%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 61%;
+  padding: 3% 13%;
+  color: #fff;
+  background-color: #131313;
+}
+
+.form_footer .form__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.form_footer .form__input-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 40%;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.form_footer .form__main-group {
+  -ms-flex-preferred-size: 41%;
+      flex-basis: 41%;
+  height: 45px;
+  text-align: left;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+}
+
+.form_footer .form__main-group label {
+  display: block;
+  text-align: left;
+  font-family: "Futura", sans-serif;
+  text-transform: none;
+  font-size: 0.9rem;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.form_footer .form__main-group input {
+  padding-top: 1%;
+  border: 0;
+  font-family: "Futura", sans-serif;
+  text-transform: none;
+  font-size: 1.1rem;
+  color: inherit;
+  background-color: transparent;
+}
+
+.form_footer .form__main-group input::-webkit-input-placeholder {
+  color: inherit;
+}
+
+.form_footer .form__main-group input:-ms-input-placeholder {
+  color: inherit;
+}
+
+.form_footer .form__main-group input::-ms-input-placeholder {
+  color: inherit;
+}
+
+.form_footer .form__main-group input::placeholder {
+  color: inherit;
+}
+
+.form_footer .form__checkbox {
+  margin-top: 3%;
+  font-family: "Futura", sans-serif;
+  text-transform: none;
+  font-size: 1rem;
+  color: inherit;
+}
+
+.form_footer .form__checkbox .form__checkbox-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.form_footer .form__checkbox input {
+  position: relative;
+  left: 18px;
+  opacity: 0;
+}
+
+.form_footer .form__checkbox input:checked + .form__checkmark::after {
+  display: block;
+}
+
+.form_footer .form__checkbox .form__checkmark {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 18px;
+  height: 18px;
+  margin-right: 7px;
+  border-radius: 2px;
+  background-color: #e3b873;
+  cursor: pointer;
+}
+
+.form_footer .form__checkbox .form__checkmark::after {
+  content: "";
+  position: absolute;
+  display: none;
+  top: 3px;
+  left: 6px;
+  width: 4px;
+  height: 7px;
+  border: solid #fff;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.form_footer p {
+  margin-bottom: 45px;
+  text-align: center;
+  font-family: "Yeseva One", cursive;
+  text-transform: uppercase;
+  font-size: 1.25rem;
+  color: inherit;
+}
+
+.form_footer .form__block {
+  margin-bottom: 7%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.form_footer .form__checkbox {
+  margin-top: 6%;
+}
+
+.form_footer .vertical-form-btn-wrap {
+  text-align: center;
+}
+
+.form_footer button {
+  margin-top: 40px;
+  width: 200px;
+  height: 50px;
+  border-radius: 2px;
+  text-transform: uppercase;
+  font-family: "Futura", sans-serif;
+  font-size: 0.9rem;
+  color: #fff;
+  background-color: #e3b873;
+  -webkit-box-shadow: 0px 15px 15px rgba(227, 184, 115, 0.15);
+          box-shadow: 0px 15px 15px rgba(227, 184, 115, 0.15);
+  cursor: pointer;
+}
+
+.form_footer button a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-decoration: none;
+  color: #fff;
+}
+
+.adress-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.adress-org {
+  width: 590px;
+  margin: auto;
+  text-align: center;
+  font-family: "Yeseva One", cursive;
+  text-transform: uppercase;
+  font-size: 1.25rem;
+  color: #e3b873;
+  line-height: 1.75rem;
+}
+
+.adress-org a {
+  color: #e3b873;
+}
+
+.contacts-icon-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 72px;
+  margin: 26px auto 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.contacts-icon-wrapper a {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  background-color: #e3b873;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.mail-icon {
+  background-image: url("../assets/img/mail-icon.png");
+}
+
+.insta-icon {
+  background-image: url("../assets/img/insta-icon.png");
+}
+
+.adress-map {
+  display: block;
+  margin: 0 auto;
+  padding: 3% 0 5%;
+}
+
+.footer-menu {
+  background-color: #181818;
+}
+
+.footer-menu .menu {
+  height: 133px;
+}
+
+.footer-menu .menu-wrap {
+  width: 46%;
+}
+
+.footer-menu .menu-btn {
+  width: 161px;
+  height: 37px;
+  border-radius: 2px;
+  text-transform: uppercase;
+  font-family: "Futura", sans-serif;
+  font-size: 13px;
+  color: #fff;
+  background-color: #e3b873;
+  -webkit-box-shadow: 0px 15px 15px rgba(227, 184, 115, 0.15);
+          box-shadow: 0px 15px 15px rgba(227, 184, 115, 0.15);
+  cursor: pointer;
+}
+
+.footer-menu .menu-btn a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-decoration: none;
+  color: #fff;
 }
 /*# sourceMappingURL=main.css.map */
